<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_notification"
            android:title="@string/notification">
<!--            <menu>-->
<!--                <item-->
<!--                    android:id="@+id/tv_yes"-->
<!--                    android:title="Yes"-->

<!--                    />-->
<!--                <item-->
<!--                    android:id="@+id/tv_no"-->
<!--                    android:title="No"-->
<!--                    />-->
<!--            </menu>-->
        </item>
        <item
            android:id="@+id/nav_terms_of_use"
            android:title="@string/terms_of_use" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_rate_the_app"
            android:title="@string/rate_the_app" />
    </group>
</menu>