<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/fullLayout"
    android:background="@color/grey_900"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Bottom Navigation Bar start-->
    <RelativeLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:weightSum="1">
            <LinearLayout
                android:id="@+id/layoutAlert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight=".200">
                <ImageView
                    android:id="@+id/imgAlert"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/alert_img"/>
                <TextView
                    android:id="@+id/tvAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutPrescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".200"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/imgPrescription"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/prescription_img"/>
                <TextView
                    android:id="@+id/tvPrescriptin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prescription"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".200"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/imgHome"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/home_img"/>
                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_home"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutMyOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight=".200">
                <ImageView
                    android:id="@+id/ivMyOrder"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/my_order_img"/>
                <TextView
                    android:id="@+id/tvMyOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight=".200">
                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/regular_username"/>
                <TextView
                    android:id="@+id/tvProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <!--Bottom Navigation Bar end-->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"/>





    <!--    <include-->
    <!--        android:layout_above="@+id/bottom_navigation"-->
    <!--        layout="@layout/content_base"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_width="match_parent" />-->

</RelativeLayout>