<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <!--Bottom Navigation Bar start-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_above="@id/bottom_ll"
            android:background="@color/grey_900" />


        <LinearLayout
            android:id="@+id/bottom_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/layoutAlert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".200"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAlert"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/alert_img" />

                <TextView
                    android:id="@+id/tvAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/alert"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutNearStore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".200"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgNearStore"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_6sdp"
                    app:srcCompat="@drawable/store_black" />

                <TextView
                    android:id="@+id/tvNearStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/near_store"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".200"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgHome"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/home_img" />

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/title_home"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMyOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".200"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgMyOrder"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/my_order_img" />

                <TextView
                    android:id="@+id/tvMyOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/my_order"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".200"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/regular_username" />

                <TextView
                    android:id="@+id/tvProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Profile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp" />
            </LinearLayout>
        </LinearLayout>

        <!--Bottom Navigation Bar end-->
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </RelativeLayout>
    <!--    <include-->
    <!--        android:layout_above="@+id/bottom_navigation"-->
    <!--        layout="@layout/content_base"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_width="match_parent" />-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/blue"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_dashboard"
        app:itemTextColor="@color/white"
        app:menu="@menu/activity_main_drawer">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18sdp"
                android:background="@drawable/logout_btn_bg"
                android:layout_marginTop="@dimen/_410sdp"
                android:text="Logout"
                android:textColor="#ff0000"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>